Serviceability tests